xserver-xorg-input-keyboard (1:1.3.2-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Julien Cristau <jcristau@debian.org>  Wed, 21 Jan 2009 22:06:20 +0100

xserver-xorg-input-keyboard (1:1.3.1-2) experimental; urgency=low

  * Build against xserver 1.5 rc5.

 -- Julien Cristau <jcristau@debian.org>  Mon, 14 Jul 2008 02:09:52 +0200

xserver-xorg-input-keyboard (1:1.3.1-1) unstable; urgency=low

  * New upstream release.
    + Manpage says kbd replaced keyboard, closes: #443452.
  * Bump Standards-Version to 3.7.3 (no changes).
  * The Vcs-* fields are now recognized by dpkg, so drop the XS- prefix.
  * Run dpkg-shlibdeps with --warnings=6.  Drivers reference symbols from
    /usr/bin/Xorg and other modules, and that's not a bug, so we want
    dpkg-shlibdeps to shut up about symbols it can't find.
    + Build-depend on dpkg-dev >= 1.14.17.
  * Update debian/copyright according to the new upstream one.

 -- Brice Goglin <bgoglin@debian.org>  Wed, 28 May 2008 22:02:08 +0200

xserver-xorg-input-keyboard (1:1.2.2-3) unstable; urgency=low

  * Upload to unstable

 -- David Nusinow <dnusinow@debian.org>  Sun, 16 Sep 2007 15:13:37 -0400

xserver-xorg-input-keyboard (1:1.2.2-2) UNRELEASED; urgency=low

  * Add upstream URL to debian/copyright.

 -- Brice Goglin <bgoglin@debian.org>  Sat, 15 Sep 2007 01:46:21 +0200

xserver-xorg-input-keyboard (1:1.2.2-1) experimental; urgency=low

  * New upstream release.
  * Update debian/copyright.
  * Add myself to Uploaders, and remove Branden with his permission.
  * Build against xserver 1.4.

 -- Julien Cristau <jcristau@debian.org>  Mon, 10 Sep 2007 15:44:08 +0200

xserver-xorg-input-keyboard (1:1.2.0-2) experimental; urgency=low

  * Set distribution to unstable in debian/NEWS (closes: #428845).
  * Rebuild against xserver 1.3.99.0 (new ABI).
  * Generate the Provides field automatically.

 -- Julien Cristau <jcristau@debian.org>  Sat, 18 Aug 2007 19:48:05 +0200
