@@ -1,6 +1,9 @@
 xserver-xorg-input-keyboard (1:1.3.2-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Run autoreconf on build; build-depend on automake, libtool and xutils-dev
+    >= 1:7.4+4.
+  * Handle parallel builds.
 
  -- Julien Cristau <jcristau@debian.org>  Wed, 21 Jan 2009 22:06:20 +0100
 
